Better foundational error handling & reporting. The low-level exec now checks return codes for non-zero. The P4Runner now validates the p4client to ensure that it is available. All these errors turn into exceptions with messages and then get reported in main.

--- a/build.gradle
+++ b/build.gradle
@@ -10,7 +10,7 @@ buildscript {
     flatDir { dirs '../../RobertFischer/gradle-plugins/build/libs' }
   }
   dependencies {
-    classpath 'com.smokejumperit:gradle-plugins:0.8.2'
+    classpath 'com.smokejumperit:gradle-plugins:0.8.2+cq1'
   }
 }
 
