Added support for controlling publish repo based on project kind: (lib vs app). Changes are project-local for now until we think of how to generalizes them.

--- a/build.gradle
+++ b/build.gradle
@@ -7,6 +7,8 @@ apply from: file('gradle/convention.gradle')
 //apply from: file('gradle/check.gradle')
 //apply from: file('gradle/license.gradle') // Waiting for re-release
 
+ext.kind = 'app'
+
 jar {
     manifest {
         attributes 'Main-Class': 'com.netflix.postreview.Main'
