--- a/gradle/netflix-oss.gradle
+++ b/gradle/netflix-oss.gradle
@@ -1,1 +1,2 @@
-apply from: 'http://artifacts.netflix.com/gradle-netflix-local/artifactory.gradle'
+//apply from: 'http://artifacts.netflix.com/gradle-netflix-local/artifactory.gradle'
+apply from: 'artifactory.gradle'
